--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -49,6 +52,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.1.11",
     "webpack-merge": "^4.1.0"
   },
